@@ -22,6 +22,7 @@ import nl.lifely.zac.itest.config.ItestConfiguration.ZAAKTYPE_MELDING_KLEIN_EVEN
 import nl.lifely.zac.itest.config.ItestConfiguration.ZAAK_2_IDENTIFICATION
 import nl.lifely.zac.itest.config.ItestConfiguration.ZAC_API_URI
 import org.json.JSONObject
+import org.mockserver.model.HttpStatusCode
 
 private val itestHttpClient = ItestHttpClient()
 private val zacClient = ZacClient()
@@ -32,51 +33,46 @@ private val logger = KotlinLogging.logger {}
  */
 @Order(TEST_SPEC_ORDER_AFTER_ZAAK_CREATED)
 class ZakenRESTServiceTest : BehaviorSpec({
-    given("ZAC Docker container is running and zaakafhandelparameters have been created") {
+    Given("ZAC Docker container is running and zaakafhandelparameters have been created") {
         When("the create zaak endpoint is called and the user has permissions for the zaaktype used") {
-            then("the response should be a 200 HTTP response with the created zaak") {
-                zacClient.createZaak(
-                    ZAAKTYPE_MELDING_KLEIN_EVENEMENT_UUID,
-                    GROUP_A_ID,
-                    GROUP_A_NAME
-                ).use { response ->
-                    response.isSuccessful shouldBe true
-                    JSONObject(response.body!!.string()).apply {
-                        getJSONObject("zaaktype").getString("identificatie") shouldBe ZAAKTYPE_MELDING_KLEIN_EVENEMENT_IDENTIFICATIE
-                        getJSONObject("zaakdata").apply {
-                            getString("zaakUUID") shouldNotBe null
-                            getString("zaakIdentificatie") shouldBe ZAAK_2_IDENTIFICATION
-                        }
+            val response = zacClient.createZaak(
+                ZAAKTYPE_MELDING_KLEIN_EVENEMENT_UUID,
+                GROUP_A_ID,
+                GROUP_A_NAME
+            )
+            Then("the response should be a 200 HTTP response with the created zaak") {
+                response.code shouldBe HttpStatusCode.OK_200.code()
+                JSONObject(response.body!!.string()).apply {
+                    getJSONObject("zaaktype").getString("identificatie") shouldBe ZAAKTYPE_MELDING_KLEIN_EVENEMENT_IDENTIFICATIE
+                    getJSONObject("zaakdata").apply {
+                        getString("zaakUUID") shouldNotBe null
+                        getString("zaakIdentificatie") shouldBe ZAAK_2_IDENTIFICATION
                     }
                 }
             }
         }
     }
-    given("A zaak has been created") {
+    Given("A zaak has been created") {
         When("the assign group to zaak endpoint is called") {
-            then("the group should be assigned to the zaak") {
-                // note that this HTTP request currently requires the following environment variable
-                // to be set when running this test: JAVA_TOOL_OPTIONS=--add-opens=java.base/java.net=ALL-UNNAMED
-                // see: https://github.com/lojewalo/khttp/issues/88
-                itestHttpClient.performPatchRequest(
-                    url = "${ZAC_API_URI}/zaken/toekennen",
-                    requestBodyAsString = "{\n" +
-                        "  \"zaakUUID\": \"$zaak1UUID\",\n" +
-                        "  \"groepId\": \"$GROUP_A_ID\",\n" +
-                        "  \"reden\": \"dummyReason\"\n" +
-                        "}"
-                ).use { response ->
-                    val responseBody = response.body!!.string()
-                    logger.info { "Response: $responseBody" }
-                    response.isSuccessful shouldBe true
+            val response = itestHttpClient.performPatchRequest(
+                url = "${ZAC_API_URI}/zaken/toekennen",
+                requestBodyAsString = "{\n" +
+                    "  \"zaakUUID\": \"$zaak1UUID\",\n" +
+                    "  \"groepId\": \"$GROUP_A_ID\",\n" +
+                    "  \"reden\": \"dummyReason\"\n" +
+                    "}"
+            )
+            Then("the group should be assigned to the zaak") {
+                val responseBody = response.body!!.string()
+                logger.info { "Response: $responseBody" }
+                response.isSuccessful shouldBe true
 
-                    with(responseBody) {
-                        shouldContainJsonKeyValue("uuid", zaak1UUID.toString())
-                        shouldContainJsonKey("groep")
-                        JSONObject(this).getJSONObject("groep").apply {
-                            getString("id") shouldBe GROUP_A_ID
-                            getString("naam") shouldBe GROUP_A_NAME
-                        }
+                with(responseBody) {
+                    shouldContainJsonKeyValue("uuid", zaak1UUID.toString())
+                    shouldContainJsonKey("groep")
+                    JSONObject(this).getJSONObject("groep").apply {
+                        getString("id") shouldBe GROUP_A_ID
+                        getString("naam") shouldBe GROUP_A_NAME
                     }
                 }
             }
